# cvlr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: main.yml
cvlr/: Cargo.toml
cvlr-asserts/: Cargo.toml
cvlr-asserts/src/: asserts.rs  core.rs  lib.rs  log.rs
cvlr-asserts/tests/: test_asserts.rs
cvlr-asserts/tests/expand/: test_cvlr_assert_comparison.expanded.rs  test_cvlr_assert_eq.expanded.rs  test_cvlr_assert_eq_if.expanded.rs  test_cvlr_assert_eq_if.rs  test_cvlr_assert_ne.expanded.rs  test_cvlr_assume_eq.expanded.rs
cvlr-decimal/: Cargo.toml
cvlr-decimal/src/: native_decimal.rs
cvlr-derive/: Cargo.toml
cvlr-derive/src/: lib.rs
cvlr-derive/tests/: test_cvlr_log.rs  test_nondet.rs
cvlr-derive/tests/expand/: test_cvlr_log_enum_named.expanded.rs  test_cvlr_log_enum_unit.expanded.rs  test_cvlr_log_enum_unnamed.expanded.rs  test_cvlr_log_named.expanded.rs  test_cvlr_log_unit.expanded.rs  test_cvlr_log_unnamed.expanded.rs  test_nondet_enum.expanded.rs  test_nondet_enum.stderr
cvlr-early-panic/: Cargo.toml
cvlr-early-panic/src/: lib.rs
cvlr-fixed/: Cargo.toml
cvlr-fixed/src/: lib.rs  native_fixed.rs
cvlr-hook/src/: lib.rs
cvlr-log/: Cargo.toml
cvlr-log/src/: core.rs  lib.rs  log.rs
cvlr-log/tests/: test_cvlr_log.rs
cvlr-macros/: Cargo.toml
cvlr-macros/src/: assert_that.rs  lib.rs  predicate.rs  rule_for_spec.rs
cvlr-macros/tests/: test_assert_that.rs  test_cvlr_predicate.rs
cvlr-macros/tests/expand/: test_cvlr_assert_all.expanded.rs  test_cvlr_assert_all.rs  test_cvlr_assert_that_booleans.expanded.rs  test_cvlr_assert_that_booleans.rs  test_cvlr_assert_that_comparisons.expanded.rs  test_cvlr_assert_that_comparisons.rs  test_cvlr_assert_that_guarded_comparisons.expanded.rs  test_cvlr_assert_that_guarded_comparisons.rs  test_cvlr_assume_all.expanded.rs  test_cvlr_assume_all.rs  test_cvlr_assume_that.expanded.rs  test_cvlr_assume_that.rs  test_cvlr_eval_all.expanded.rs  test_cvlr_eval_all.rs  test_cvlr_eval_that.rs  test_cvlr_predicate.expanded.rs  test_cvlr_predicate.rs  test_cvlr_rule_for_spec.expanded.rs  test_cvlr_rule_for_spec.rs
cvlr-mathint/: Cargo.toml
cvlr-mathint/src/: lib.rs  nativeint_u64.rs
cvlr-nondet/: Cargo.toml
cvlr-nondet/src/: havoc.rs  lib.rs
cvlr-spec/: Cargo.toml
cvlr-spec/src/: bool_expr.rs  combinators.rs  lib.rs  macros.rs  spec.rs  state_pair.rs
cvlr-spec/tests/: test_doctest_examples.rs  test_spec.rs
cvlr/src/: lib.rs
scripts/: release.sh
