[workspace]
resolver = "2"
members = [
    "cvlr",
    "cvlr-asserts",
    "cvlr-mathint",
    "cvlr-log",
    "cvlr-nondet",
    "cvlr-early-panic",
    "cvlr-hook",
    "cvlr-macros",
    "cvlr-fixed"
]

[workspace.package]
version = "0.3.2"
authors = [
    "Arie Gurfinkel <arie@certora.com>",
    "Jorge A. Navas <jorge@certora.com>",
    "Francesco Parolini <francesco@certora.com>",
    "Chandrakana Nandi <chandra@certora.com>",
    "Alexander Bakst <abakst@certora.com>",
]
edition = "2021"
description = "Certora Verification Language for Rust"
documentation = "https://docs.rs/cvlr/latest"
license = "MIT"
keywords = [
    "certora", 
    "assert", 
    "logic", 
    "verification", 
    "formal-methods",
]
categories = [
    "development-tools::debugging", 
    "development-tools::testing", 
    "no-std"
]
readme = "README.md"
homepage = "https://www.certora.com"
repository = "https://github.com/Certora/cvlr"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
macrotest = "1"
trybuild = "1"

cvlr = { path = "cvlr" }
cvlr-asserts = { path = "cvlr-asserts" }
cvlr-mathint = { path = "cvlr-mathint" }
cvlr-nondet = { path = "cvlr-nondet", default-features = false }
cvlr-log = { path = "cvlr-log" }
cvlr-macros = { path = "cvlr-macros" }
cvlr-early-panic = { path = "cvlr-early-panic" }
cvlr-hook = { path = "cvlr-hook" }
cvlr-fixed = { path = "cvlr-fixed" }