[package]
name = "cvlr"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["cvlr-nondet/std"]
vacuity = ["cvlr-asserts/vacuity"]
rt = ["cvlr-asserts/rt", "cvlr-mathint/rt", "cvlr-log/rt", "cvlr-nondet/rt"]
no-loc = ["cvlr-log/no-loc", "cvlr-asserts/no-loc"]

[dependencies]
cvlr-asserts = { workspace = true }
cvlr-mathint = { workspace = true }
cvlr-log = { workspace = true }
cvlr-nondet = { workspace = true, default-features = false}
cvlr-macros = { workspace = true }
cvlr-early-panic = { workspace = true }
cvlr-hook = { workspace = true }
cvlr-derive = { workspace = true }
cvlr-decimal = { workspace = true }
cvlr-fixed = { workspace = true }